vt: connect CONS_HISTORY to vtbuf_sethistory_size

vt(4) had code to support setting the history size, but it was not
connected to the user-facing CONS_HISTORY ioctl.

PR:		210415
Reported by:	Ernie Luzar
Sponsored by:	The FreeBSD Foundation